# EDZN-SJDW-GPLUGIN

./: .gitignore
gst-plugin/: autogen.sh  configure.ac
gst-plugin/src/: ImageReaderSource.cpp  ImageReaderSource.h  Makefile.am  gsthybridbin.cpp  gsthybridbin.h  gstqreader.c  gstqreader.cpp  gstqreader.h  lib_qreader.cpp  lib_qreader.h
